[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
serde = {version = "1.0.193", features = ["derive"]}
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-serde = "0.1.3"
tracing-subscriber = "0.3.18"
